--- a/search.html
+++ b/search.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search</title>
-    <link rel="stylesheet" href="search.css">
-</head>
-<body>
-  <div class="navBar">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="search.html">Search</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-  <div class="container" id="container">
-  </div>
-  <div class="searchBar" id="searchBar">
-    <form action="" class="search-bar">
-      <input type="text" placeholder="Input ingredient" name="q" id="searchInput">
-      <button type="button"><img src="public/search.png" alt="" class="search-button" id="q"></button>
-    </form>
-  </div>
-  <script>
-function openPopUp() {
-  const popUpElement = document.getElementById("popup");
+    <link rel="stylesheet" href="search.css" />
+  </head>
+  <body>
+    <div class="navBar">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="search.html">Search</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="container" id="container"></div>
+    <div class="searchBar" id="searchBar">
+      <form action="" class="search-bar">
+        <input
+          type="text"
+          placeholder="Input ingredient"
+          name="q"
+          id="searchInput"
+        />
+        <button type="button">
+          <img src="public/search.png" alt="" class="search-button" id="q" />
+        </button>
+      </form>
+    </div>
+    <script>
+      function openPopUp() {
+        const popUpElement = document.getElementById("popup");
 
-  // Make sure to check if the element is not null before accessing its classList
-  if (popUpElement) {
-    popUpElement.style.visibility = "visible";
-    popUpElement.style.transform = "translate(-50%, 100%) scale(1)";
-    popUpElement.style.transition = "transfrom 0.4s, top 0.4s";
-  }
-}
-function closePopUp() {
-  const popUpElement = document.getElementById("popup");
+        // Make sure to check if the element is not null before accessing its classList
+        if (popUpElement) {
+          popUpElement.style.visibility = "visible";
+          popUpElement.style.transform = "translate(-50%, 100%) scale(1)";
+          popUpElement.style.transition = "transfrom 0.4s, top 0.4s";
+        }
+      }
+      function closePopUp() {
+        const popUpElement = document.getElementById("popup");
 
-  // Make sure to check if the element is not null before accessing its classList
-  if (popUpElement) {
-    popUpElement.style.visibility = "hidden";
-    popUpElement.style.transform = "translate(-50%, 100%) scale(1)";
-  }
-}
-  </script>
-  <script type="module" src="./main.js"></script>
-</body>
+        // Make sure to check if the element is not null before accessing its classList
+        if (popUpElement) {
+          popUpElement.style.visibility = "hidden";
+          popUpElement.style.transform = "translate(-50%, 100%) scale(1)";
+        }
+      }
+    </script>
+    <script type="module" src="./main.js"></script>
+  </body>
 </html>
